# NewTiny

./: README.md  jitpack.yml  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/evan/newtiny/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/evan/newtiny/: App.kt  BaseActivity.kt  BatchBitmapCompressTestActivity.kt  BatchFileCompressTestActivity.kt  BatchFileWithReturnBitmapCompressTestActivity.kt  BitmapCompressTestActivity.kt  FileCompressTestActivity.kt  FileWithReturnBitmapCompressTestActivity.kt  MainActivity.kt
app/src/main/res/layout/: activity_batch_bitmap_compress_test.xml  activity_batch_file_compress_test.xml  activity_batch_file_with_return_bitmap_compress_test.xml  activity_bitmap_compress_test.xml  activity_file_compress_test.xml  activity_file_with_return_bitmap_compress_test.xml  activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/evan/newtiny/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
libjpeg-turbo/: build.gradle.kts
libjpeg-turbo-sdk/: build.gradle.kts
libjpeg-turbo-sdk/src/androidTest/java/com/xyz/libjpegturbo/: ExampleInstrumentedTest.kt
libjpeg-turbo-sdk/src/main/cpp/: CMakeLists.txt
libjpeg-turbo-sdk/src/test/java/com/xyz/libjpegturbo/: ExampleUnitTest.kt
libjpeg-turbo/src/androidTest/java/com/zxy/libjpegturbo/: ExampleInstrumentedTest.kt
tiny/: build.gradle.kts
tiny/src/main/: AndroidManifest.xml
tiny/src/main/java/com/zxy/tiny/: Tiny.java
(+6 files in other folders)
